# Ai-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: AGENTS.md  SOUL.md  jobs.example.json  mcp_servers.example.json  openclaw.config.json5
config/enterprise_policies/: access-management.md
docs/: ARCHITECTURE.md  LIFE_ASSISTANT.md
scripts/: register-openclaw.sh  setup_life_folders.py
src/automation/: __init__.py  __main__.py  scheduler.py
src/mcp_drive_server/: __init__.py  __main__.py  audit.py  config.py  drive.py  server.py
src/mcp_enterprise_server/: __init__.py  __main__.py  config.py  server.py  store.py
src/orchestrator/: __init__.py  __main__.py  agent.py  cli.py  config.py  gemini.py  llm.py  mcp_client.py  memory.py  ollama.py  openai_compatible.py  openrouter.py
src/orchestrator/prompts/: system.md
src/telegram_bot/: __init__.py  __main__.py
src/web/: __init__.py  __main__.py  app.py  schemas.py  session_store.py  telegram.py
src/web/static/: app.js  styles.css
src/web/templates/: index.html
tests/: conftest.py  test_agent_loop.py  test_audit.py  test_drive_life_tools.py  test_drive_new_tools.py  test_drive_sandbox.py  test_enterprise_server.py  test_gemini_client.py  test_mcp_multi_gateway.py  test_mcp_roundtrip.py  test_ollama_client.py  test_openai_compatible_client.py  test_openrouter_client.py  test_scheduler.py  test_telegram.py  test_telegram_helpers.py  test_web_app.py
